<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343434"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="6dp"
        android:autofillHints="@string/username_text"
        android:ems="10"
        android:hint="@string/username_text"
        android:inputType="textPersonName"
        android:textColor="#C2B59B"
        android:textColorHighlight="#C2B59B"
        android:textColorHint="#C2B59B"
        android:textColorLink="#C2B59B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="282dp"
        android:layout_height="211dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/barbershop" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="211dp"
        android:layout_height="45dp"
        android:layout_marginTop="9dp"
        android:autofillHints="@string/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#C2B59B"
        android:textColorHighlight="#C2B59B"
        android:textColorHint="#C2B59B"
        android:textColorLink="#C2B59B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="205dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:background="#985920"
        android:text="@string/log_in"
        android:textColor="#C2B59B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <TextView
        android:id="@+id/goToRegisterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register_text"
        android:textColor="#C2B59B"
        android:textColorLink="#C2B59B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="279dp"
        android:layout_height="39dp"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="107dp"
        android:layout_marginTop="15dp"
        android:textColor="#F37272"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToRegisterTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>